[gd_scene load_steps=5 format=3 uid="uid://4ne2xgqclthj"]

[ext_resource type="Script" path="res://scripts/music.gd" id="1_ghktr"]
[ext_resource type="AudioStream" uid="uid://c201tvjv0afh4" path="res://assets/Music/main_menu_theme.mp3" id="2_mrf5g"]
[ext_resource type="AudioStream" path="res://assets/Music/banana_queen_boss_theme.mp3" id="4_a8l3i"]
[ext_resource type="AudioStream" uid="uid://bjwhc84n6otms" path="res://assets/Music/sanguine_mama_boss_theme.mp3" id="4_my3w3"]

[node name="Music" type="Node"]
script = ExtResource("1_ghktr")

[node name="MainMenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mrf5g")
autoplay = true
bus = &"Music"

[node name="AmbiguousAngelTheme" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="SanguineMamaTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_my3w3")
bus = &"Music"

[node name="BananaQueenTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_a8l3i")
bus = &"Music"
